crates/ars-collections/tests/ui/tab_key_on_struct.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(ordinal)]
struct SettingsTab {
    profile: bool,
}

fn main() {}
